# tizenclaw

./: .gitignore  20260411_103853_PROMPT.md  AGENTS.md  CLAUDE.md  CMakeLists.txt  Cargo.toml  PLAN.md  README.md  ROADMAP.md  RVC_Plan.md  deploy.sh  deploy_host.sh  devel_host.sh  install.sh  pyproject.toml  pytest.ini  repo_config.ini  setup_pinchbench.sh  setup_python.sh  test_load.cc  tizen-manifest.xml  tizenclaw-cli-피드백-질의.md  개선-요구사항-프롬프트.md
rust/: Cargo.toml  README.md
rust/crates/rusty-claude-cli/: Cargo.toml
rust/crates/tclaw-api/: Cargo.toml
rust/crates/tclaw-cli/: Cargo.toml
rust/crates/tclaw-commands/: Cargo.toml
rust/crates/tclaw-plugins/: Cargo.toml
rust/crates/tclaw-runtime/: Cargo.toml
rust/crates/tclaw-tools/: Cargo.toml
rust/scripts/: run_mock_parity_diff.py  run_mock_parity_harness.sh
src/claw-platform/: Cargo.toml
src/claw-platform/src/: generic_linux.rs  loader.rs
src/lib/: CMakeLists.txt  tizenclaw_client.cc
src/lib/inc/: tizenclaw.h
src/libtizenclaw/: CMakeLists.txt  Cargo.toml  libtizenclaw.so.1  libtizenclaw.so.1.0.0  tizenclaw.pc  tizenclaw.pc.in  tizenclaw_client.cc
src/libtizenclaw-core/: CMakeLists.txt  Cargo.toml  libtizenclaw-core.so.1  libtizenclaw-core.so.1.0.0  tizenclaw-core.pc  tizenclaw-core.pc.in  tizenclaw_curl.cc
src/libtizenclaw-core/inc/: tizenclaw_channel.h  tizenclaw_llm_backend.h
src/libtizenclaw-core/include/: tizenclaw_channel.h  tizenclaw_curl.h
src/libtizenclaw-core/src/: curl_wrapper.rs  lib.rs  llm_types.rs
src/libtizenclaw-llm-backend/: CMakeLists.txt  tizenclaw-llm-backend.pc.in  tizenclaw_llm_backend.cc
src/libtizenclaw-llm-backend/inc/: tizenclaw_curl.h  tizenclaw_llm_backend.h
src/libtizenclaw/inc/: tizenclaw_error.h
src/libtizenclaw/include/: tizenclaw.h
src/libtizenclaw/src/: api.rs  lib.rs  loader.rs  paths.rs
src/pkgmgr-metadata-plugin/llm-backend/: CMakeLists.txt  tizenclaw-metadata-llm-backend-plugin.info  tizenclaw_metadata_llm_backend_plugin.cc
src/tizenclaw/: CMakeLists.txt  Cargo.toml  agent_core.cc  agent_core.hh  anthropic_backend.cc  anthropic_backend.hh  container_engine.cc  container_engine.hh  discord_channel.cc  discord_channel.hh  gemini_backend.cc  gemini_backend.hh  llm_backend.hh  ollama_backend.cc  ollama_backend.hh  openai_backend.cc  openai_backend.hh  session_store.cc  session_store.hh  slack_channel.cc  slack_channel.hh  tizenclaw.cc  tizenclaw.hh  web_dashboard.cc  web_dashboard.hh  webhook_channel.cc  webhook_channel.hh
src/tizenclaw-core/: Cargo.toml
src/tizenclaw-core/src/: adapters.rs  logging.rs
src/tizenclaw-tool-executor/: CMakeLists.txt  Cargo.toml  cli_session_manager.cc  file_manager.cc  file_manager.hh  peer_validator.cc  tizenclaw_tool_executor.cc  tool_handler.cc
src/tizenclaw-tool-executor/src/: main.rs  peer_validator.rs
src/tizenclaw-web-dashboard/: Cargo.toml
src/tizenclaw-web-dashboard/src/: main.rs
src/tizenclaw/.cargo/: config.toml
src/tizenclaw/channel/: channel.hh  channel_factory.cc  channel_registry.cc  channel_registry.hh  discord_channel.cc  discord_channel.hh  mcp_client.cc  mcp_client.hh  mcp_client_manager.cc  mcp_client_manager.hh  plugin_channel.cc  plugin_channel.hh  slack_channel.cc  telegram_client.cc  telegram_client.hh  voice_channel.hh  web_dashboard.cc  web_dashboard.hh  webhook_channel.cc  webhook_channel.hh
src/tizenclaw/core/: action_bridge.cc  action_bridge.hh  agent_core.cc  agent_core.hh  agent_factory.cc  agent_factory.hh  agent_role.cc  agent_role.hh  autonomous_trigger.cc  autonomous_trigger.hh  capability_registry.cc  capability_registry.hh  cli_plugin_manager.cc  cli_plugin_manager.hh  perception_engine.cc  safety_guard.cc  safety_guard.hh  screen_perceptor.cc  screen_perceptor.hh  skill_manifest.hh  skill_plugin_manager.cc  skill_plugin_manager.hh  skill_repository.cc  skill_verifier.cc  skill_watcher.hh  swarm_manager.cc  system_cli_adapter.cc  system_cli_adapter.hh  system_context_provider.cc  tizenclaw.cc  tizenclaw.hh  tool_declaration_builder.cc  tool_dispatcher.cc  tool_indexer.cc  tool_indexer.hh  tool_policy.hh  tool_router.cc  tool_router.hh  user_profile_store.cc  user_profile_store.hh
src/tizenclaw/embedding/: on_device_embedding.hh
src/tizenclaw/infra/: container_engine.cc  container_engine.hh  fleet_agent.cc  fleet_agent.hh  http_client.cc  key_store.cc  pkgmgr_client.cc  pkgmgr_client.hh  pkgmgr_event_args.cc  pkgmgr_event_args.hh  tizen_system_event_adapter.cc  tunnel_manager.cc  tunnel_manager.hh  vconf_event_adapter.cc  vconf_event_adapter.hh
src/tizenclaw/llm/: llm_backend_factory.cc  plugin_llm_backend.cc  plugin_llm_backend.hh  plugin_manager.cc  plugin_manager.hh
src/tizenclaw/scheduler/: task_scheduler.cc
src/tizenclaw/src/: main.rs
src/tizenclaw/storage/: embedding_store.cc  embedding_store.hh  session_store.cc  session_store.hh
src/tool_executor/: CMakeLists.txt
src_bak/pkgmgr-metadata-plugin/cli/: CMakeLists.txt  tizenclaw-metadata-cli-plugin.info
src_bak/pkgmgr-metadata-plugin/skill/: CMakeLists.txt  tizenclaw-metadata-skill-plugin.info  tizenclaw_metadata_skill_plugin.cc
src_bak/tizenclaw-cli/: CMakeLists.txt  interactive_shell.cc  interactive_shell.hh  main.cc  request_handler.cc  request_handler.hh  socket_client.cc  socket_client.hh  tool_prober.hh
test/unit_tests/: CMakeLists.txt  agent_core_test.cc  audit_logger_test.cc  container_engine_test.cc  embedding_store_test.cc  main.cc  session_store_test.cc  skill_verifier_test.cc  skill_watcher_test.cc  system_cli_adapter_test.cc  telegram_bridge_test.cc  tizenclaw-unittests[1]_include.cmake  tool_policy_test.cc  tool_router_test.cc  webhook_channel_test.cc
tools/cli/: CMakeLists.txt  index.md
tools/cli/aurum-cli/: CMakeLists.txt  aurum.grpc.pb.cc  aurum.grpc.pb.h  aurum.pb.cc  aurum.pb.h  aurum.proto  aurum_cli.cc  aurum_grpc_client.cc  aurum_grpc_client.hh  aurum_watcher.cc  aurum_watcher.hh  tool.md
tools/cli/robotic-vacuum-cli/: CMakeLists.txt  main.cc  smartthings_client.cc  smartthings_client.hh  tool.md  vacuum_controller.cc  vacuum_controller.hh
(+1054 files in other folders)
