[workspace]
resolver = "2"
members = [
    "src/claw-platform",
    "src/tizenclaw",
    "src/tizenclaw-cli",
    "src/libtizenclaw",
    "src/libtizenclaw-core",
    "src/tizenclaw-tool-executor",
]
# tizen-sys and tizenclaw-core are built separately via GBS for Tizen deployment
exclude = [
    "src/tizen-sys",
    "src/claw-tizen",
]

[profile.release]
opt-level = "s"  # Optimize for size
lto = true       # Enable Link Time Optimization
panic = "abort"  # Abort on panic for smaller binary size
codegen-units = 1 # Better optimization
