[workspace]
resolver = "2"
members = [
    "crates/tclaw-api",
    "crates/tclaw-cli",
    "crates/tclaw-plugins",
    "crates/tclaw-runtime",
    "crates/tclaw-tools",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
