[package]
name = "libtizenclaw"
version = "1.0.0"
edition = "2021"
description = "TizenClaw plugin framework — builds as libtizenclaw.so"

[lib]
name = "tizenclaw"
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
libloading = "0.8"
