SET(TARGET_TIZENCLAW_CORE "tizenclaw-core")

ADD_LIBRARY(${TARGET_TIZENCLAW_CORE} SHARED
    tizenclaw_llm_backend.cc
    tizenclaw_curl.cc
)

APPLY_PKG_CONFIG(${TARGET_TIZENCLAW_CORE} PRIVATE
  DLOG_DEPS
  LIBCURL_DEPS
)

# Use global FULLVER from top-level or define locally
if(NOT DEFINED FULLVER)
  set(FULLVER "1.0.0")
endif()

SET_TARGET_PROPERTIES(${TARGET_TIZENCLAW_CORE} PROPERTIES
  VERSION ${FULLVER}
  SOVERSION "1"
  C_VISIBILITY_PRESET hidden
  CXX_VISIBILITY_PRESET hidden
  VISIBILITY_INLINES_HIDDEN 1
)

TARGET_INCLUDE_DIRECTORIES(${TARGET_TIZENCLAW_CORE}
    PUBLIC
        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/inc>
        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../libtizenclaw/inc>
        $<INSTALL_INTERFACE:include/tizenclaw/llm-backend>
    PRIVATE
        ${CMAKE_CURRENT_SOURCE_DIR}/../common
)

configure_file(
  ${CMAKE_CURRENT_SOURCE_DIR}/tizenclaw-core.pc.in
  ${CMAKE_CURRENT_BINARY_DIR}/tizenclaw-core.pc
  @ONLY
)

# Install rules
INSTALL(TARGETS ${TARGET_TIZENCLAW_CORE}
    LIBRARY DESTINATION ${LIB_INSTALL_DIR}
    ARCHIVE DESTINATION ${LIB_INSTALL_DIR}
)

INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/inc/
    DESTINATION ${INCLUDEDIR}/tizenclaw/llm-backend
    FILES_MATCHING PATTERN "*.h"
)

INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/tizenclaw-core.pc
    DESTINATION ${LIB_INSTALL_DIR}/pkgconfig
)
