[package]
name = "libtizenclaw-core"
version = "1.0.0"
edition = "2021"
description = "TizenClaw Plugin SDK — C FFI for LLM handles, HTTP helper, and plugin interfaces"

[lib]
name = "tizenclaw_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde_json = "1"
log = "0.4"
libc = "0.2"
ureq = { version = "2", features = ["native-tls"], default-features = false }
