# CMakeLists.txt for libtizenclaw CAPI
SET(CAPI_SRC
  "tizenclaw_client.cc"
)

ADD_LIBRARY(tizenclaw-api SHARED ${CAPI_SRC})
IF(NOT DEFINED FULLVER)
  SET(FULLVER "1.0.0")
ENDIF()

SET_TARGET_PROPERTIES(tizenclaw-api PROPERTIES
  OUTPUT_NAME tizenclaw
  VERSION ${FULLVER}
  SOVERSION "1"
)

TARGET_INCLUDE_DIRECTORIES(tizenclaw-api PUBLIC
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/inc>
  $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/tizenclaw>
)

# Install rules
INSTALL(TARGETS tizenclaw-api
  LIBRARY DESTINATION ${LIB_INSTALL_DIR}
  ARCHIVE DESTINATION ${LIB_INSTALL_DIR}
)

INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/inc/
  DESTINATION ${INCLUDEDIR}/tizenclaw
  FILES_MATCHING PATTERN "*.h"
)

configure_file(
  ${CMAKE_CURRENT_SOURCE_DIR}/tizenclaw.pc.in
  ${CMAKE_CURRENT_BINARY_DIR}/tizenclaw.pc
  @ONLY
)

INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/tizenclaw.pc
  DESTINATION ${CMAKE_INSTALL_LIBDIR}/pkgconfig
)
