[package]
name = "tizenclaw-tool-executor"
version = "1.0.0"
edition = "2021"
description = "TizenClaw sandboxed tool execution daemon"

[[bin]]
name = "tizenclaw-tool-executor"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
libc = "0.2"
tizen-sys = { path = "../tizen-sys" }
tokio = { version = "1", features = ["full"] }
futures = "0.3"

