AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/core CORE_SRCS)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/llm LLM_SRCS)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/channel CHANNEL_SRCS)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/storage STORAGE_SRCS)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/infra INFRA_SRCS)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/scheduler SCHEDULER_SRCS)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/embedding EMBEDDING_SRCS)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/../common COMMON_SRCS)

ADD_EXECUTABLE(${TARGET_TIZENCLAW}
  ${COMMON_SRCS}
  ${CORE_SRCS}
  ${LLM_SRCS}
  ${CHANNEL_SRCS}
  ${STORAGE_SRCS}
  ${INFRA_SRCS}
  ${SCHEDULER_SRCS}
  ${EMBEDDING_SRCS}
  infra/tunnel_manager.cc
)

TARGET_INCLUDE_DIRECTORIES(${TARGET_TIZENCLAW} PUBLIC
  "${CMAKE_CURRENT_SOURCE_DIR}/../common"
  "${CMAKE_CURRENT_SOURCE_DIR}/../common/nlohmann"
  "${CMAKE_CURRENT_SOURCE_DIR}"
  "${CMAKE_CURRENT_SOURCE_DIR}/core"
  "${CMAKE_CURRENT_SOURCE_DIR}/llm"
  "${CMAKE_CURRENT_SOURCE_DIR}/channel"
  "${CMAKE_CURRENT_SOURCE_DIR}/storage"
  "${CMAKE_CURRENT_SOURCE_DIR}/infra"
  "${CMAKE_CURRENT_SOURCE_DIR}/scheduler"
  "${CMAKE_CURRENT_SOURCE_DIR}/embedding"
)

APPLY_PKG_CONFIG(${TARGET_TIZENCLAW} PUBLIC
  TIZEN_CORE_DEPS
  GLIB_DEPS
  DLOG_DEPS
  LIBCURL_DEPS
  SQLITE3_DEPS
  TIZEN_ACTION_DEPS
  LIBSOUP_DEPS
  LIBWEBSOCKETS_DEPS
  PKGMGR_DEPS
  PKGMGR_INFO_DEPS
  PKGMGR_INSTALLER_DEPS
  PKGMGR_PARSER_DEPS
  APP_EVENT_DEPS
  AUL_DEPS
  RUA_DEPS
  VCONF_DEPS
)

TARGET_LINK_LIBRARIES(${TARGET_TIZENCLAW} PRIVATE tizenclaw-core dl xml2)

IF(TIZEN_STT_FOUND)
  TARGET_LINK_LIBRARIES(${TARGET_TIZENCLAW} PUBLIC ${TIZEN_STT_LIBRARIES})
  TARGET_INCLUDE_DIRECTORIES(${TARGET_TIZENCLAW} PUBLIC ${TIZEN_STT_INCLUDE_DIRS})
  TARGET_COMPILE_DEFINITIONS(${TARGET_TIZENCLAW} PUBLIC TIZEN_STT_ENABLED)
ENDIF()
IF(TIZEN_TTS_FOUND)
  TARGET_LINK_LIBRARIES(${TARGET_TIZENCLAW} PUBLIC ${TIZEN_TTS_LIBRARIES})
  TARGET_INCLUDE_DIRECTORIES(${TARGET_TIZENCLAW} PUBLIC ${TIZEN_TTS_INCLUDE_DIRS})
  TARGET_COMPILE_DEFINITIONS(${TARGET_TIZENCLAW} PUBLIC TIZEN_TTS_ENABLED)
ENDIF()

TARGET_COMPILE_DEFINITIONS(${TARGET_TIZENCLAW} PUBLIC
  APP_DATA_DIR="${APP_DATA_DIR}"
)

INSTALL(TARGETS ${TARGET_TIZENCLAW} DESTINATION ${BINDIR})

# systemd services and sockets
INSTALL(FILES
  ${CMAKE_SOURCE_DIR}/packaging/tizenclaw.service
  ${CMAKE_SOURCE_DIR}/packaging/tizenclaw-tool-executor.service
  ${CMAKE_SOURCE_DIR}/packaging/tizenclaw-tool-executor.socket
  ${CMAKE_SOURCE_DIR}/packaging/tizenclaw-code-sandbox.service
  ${CMAKE_SOURCE_DIR}/packaging/tizenclaw-code-sandbox.socket
  DESTINATION /usr/lib/systemd/system/
)

# Container scripts
INSTALL(PROGRAMS
  ${CMAKE_SOURCE_DIR}/scripts/run_standard_container.sh
  ${CMAKE_SOURCE_DIR}/scripts/tizenclaw_secure_container.sh
  DESTINATION /usr/libexec/tizenclaw/
)

# Code executor for sandbox container
INSTALL(FILES
  ${CMAKE_SOURCE_DIR}/scripts/tizenclaw_code_executor.py
  DESTINATION /usr/libexec/tizenclaw/
)

# MCP tunnel
INSTALL(PROGRAMS ${CMAKE_SOURCE_DIR}/scripts/start_mcp_tunnel.sh DESTINATION ${BINDIR})

# Rootfs image (architecture-specific)
IF(NOT DEFINED TIZENCLAW_ARCH)
  EXECUTE_PROCESS(COMMAND uname -m OUTPUT_VARIABLE TIZENCLAW_ARCH OUTPUT_STRIP_TRAILING_WHITESPACE)
ENDIF()
# Normalize: arm, armv7l, armv7hl → armv7l
IF(TIZENCLAW_ARCH MATCHES "^arm" AND NOT TIZENCLAW_ARCH STREQUAL "aarch64")
  SET(TIZENCLAW_ARCH "armv7l")
ENDIF()
MESSAGE(STATUS "Target architecture for rootfs: ${TIZENCLAW_ARCH}")
INSTALL(FILES ${CMAKE_SOURCE_DIR}/data/img/${TIZENCLAW_ARCH}/rootfs.tar.gz
  DESTINATION /opt/usr/share/tizenclaw/img/)

# Config samples
FILE(GLOB CONFIG_FILES ${CMAKE_SOURCE_DIR}/data/config/*.txt ${CMAKE_SOURCE_DIR}/data/config/*.json)
INSTALL(FILES ${CONFIG_FILES} DESTINATION /opt/usr/share/tizenclaw/config/)

# Skills, tools, web
INSTALL(FILES ${CMAKE_SOURCE_DIR}/tools/routing_guide.md DESTINATION /opt/usr/share/tizenclaw/tools/)
# INSTALL(DIRECTORY ${CMAKE_SOURCE_DIR}/tools/skills/ DESTINATION /opt/usr/share/tizenclaw/tools/skills/)
INSTALL(DIRECTORY ${CMAKE_SOURCE_DIR}/tools/embedded/ DESTINATION /opt/usr/share/tizenclaw/tools/embedded/)
INSTALL(DIRECTORY ${CMAKE_SOURCE_DIR}/data/web/ DESTINATION /opt/usr/share/tizenclaw/web/)

# System CLI tools config + descriptors
INSTALL(FILES "${CMAKE_SOURCE_DIR}/data/sample/system_cli_config.json.sample"
        DESTINATION "${APP_DATA_DIR}/config"
        RENAME "system_cli_config.json")
INSTALL(DIRECTORY ${CMAKE_SOURCE_DIR}/data/system_cli/
        DESTINATION /opt/usr/share/tizenclaw/tools/system_cli/)

# RAG data (compressed; unzipped during %post in spec)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/data/rag/web.zip
        DESTINATION /opt/usr/share/tizenclaw/rag/)
