[package]
name = "tizenclaw"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "time", "macros", "sync", "rt", "process", "net"] }
tizen-sys = { path = "../tizen-sys" }

# JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Web server
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }

# HTTP client — native-tls with CA cert probing for Tizen
reqwest = { version = "0.12", default-features = false, features = ["native-tls", "gzip", "json", "stream"] }
native-tls = "0.2"

# SQLite (bundled = compiles sqlite3 from source)
rusqlite = { version = "0.31", features = ["bundled"] }

# Logging facade
log = "0.4"

# POSIX (signals, sockets)
libc = "0.2"
async-trait = "0.1"
futures-util = "0.3"

[features]
mock-sys = ["tizen-sys/mock-sys"]

[dev-dependencies]
tempfile = "3"
